force-app/main/default/objects/Integration_Connector_Capability__mdt/Integration_Connector_Capability__mdt.object-meta.xml
<CustomObject>
    <description>Capability records attached to connector registry entries. Capabilities drive UI, checkout, scheduler, mapping, reporting, and carrier behavior.</description>
    <label>Integration Connector Capability</label>
    <pluralLabel>Integration Connector Capabilities</pluralLabel>
</CustomObject>