force-app/main/default/objects/Integration_Connector_Capability__mdt/fields/Capability_Key__c.field-meta.xml
<CustomField>
    <fullName>Capability_Key__c</fullName>
    <label>Capability Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>